load(
    "//rules_java_gapic:java_gapic.bzl",
    "java_gapic_library",
    "java_gapic_test",
)
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_gapic//:gapic.bzl", "proto_library_with_info")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//rules_java_gapic:java_gapic_pkg.bzl", "java_gapic_assembly_gradle_pkg")

package(default_visibility = ["//visibility:public"])

proto_library_with_info(
    name = "showcase_proto_with_info",
    deps = [
        "@com_google_gapic_showcase//schema/google/showcase/v1beta1:showcase_proto",
        "@com_google_googleapis//google/cloud:common_resources_proto",
    ],
)

java_proto_library(
    name = "showcase_java_proto",
    deps = ["@com_google_gapic_showcase//schema/google/showcase/v1beta1:showcase_proto"],
)

java_grpc_library(
    name = "showcase_java_grpc",
    srcs = ["@com_google_gapic_showcase//schema/google/showcase/v1beta1:showcase_proto"],
    deps = [":showcase_java_proto"],
)

java_gapic_library(
    name = "showcase_java_gapic",
    srcs = [":showcase_proto_with_info"],
    gapic_yaml = None,
    grpc_service_config = "@com_google_gapic_showcase//schema/google/showcase/v1beta1:showcase_grpc_service_config.json",
    rest_numeric_enums = True,
    service_yaml = "@com_google_gapic_showcase//schema/google/showcase/v1beta1:showcase_v1beta1.yaml",
    test_deps = [
        ":showcase_java_grpc",
    ],
    transport = "grpc+rest",
    deps = [
        ":showcase_java_proto",
        "@com_google_googleapis//google/api:api_java_proto",
    ],
)

java_gapic_test(
    name = "showcase_java_gapic_test_suite",
    test_classes = [
        "com.google.showcase.v1beta1.ComplianceClientTest",
        "com.google.showcase.v1beta1.EchoClientTest",
        "com.google.showcase.v1beta1.IdentityClientTest",
        "com.google.showcase.v1beta1.MessagingClientTest",
        "com.google.showcase.v1beta1.SequenceServiceClientTest",
        "com.google.showcase.v1beta1.TestingClientTest",
    ],
    runtime_deps = [":showcase_java_gapic_test"],
)

# Open Source Packages
java_gapic_assembly_gradle_pkg(
    name = "google-cloud-showcase-v1beta1-java",
    transport = "grpc+rest",
    deps = [
        ":showcase_java_gapic",
        ":showcase_java_grpc",
        ":showcase_java_proto",
        "@com_google_gapic_showcase//schema/google/showcase/v1beta1:showcase_proto",
    ],
)
