load(
    "@com_google_googleapis_imports//:imports.bzl",
    java_gapic_library = "java_gapic_library2",
)

package(default_visibility = ["//visibility:public"])

####################################################
# API Library Rules
####################################################
# These will eventually go away once more APIs in googleapis have been migrated to the microgenerator.

java_gapic_library(
    name = "asset_java_gapic",
    srcs = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto_with_info"],
    grpc_service_config = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_grpc_service_config.json",
    package = "google.cloud.asset.v1",
    test_deps = [
        "@com_google_googleapis//google/cloud/asset/v1:asset_java_grpc",
        "@com_google_googleapis//google/iam/v1:iam_java_grpc",
    ],
    deps = [
        "@com_google_googleapis//google/cloud/asset/v1:asset_java_proto",
        "@com_google_googleapis//google/iam/v1:iam_java_proto",
    ],
)
