package(default_visibility = ["//visibility:public"])
#package(default_visibility = ["//:__pkg__"])

filegroup(
    name = "generator_files",
    srcs = glob(["*.java"]),
)

java_library(
    name = "generator",
    srcs = [
        ":generator_files",
    ],
    deps = [
        "@com_google_guava_guava__com_google_api_codegen//jar",
        "@com_google_protobuf//:protobuf_java",
    ],
)
