package(default_visibility = ["//visibility:public"])
#package(default_visibility = ["//:__pkg__"])

filegroup(
    name = "generator_files",
    srcs = glob(["*.java"]),
)

java_plugin(
    name = "autovalue_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = [
        "@com_google_auto_value_auto_value//jar",
    ],
)

java_library(
    name = "autovalue",
    exported_plugins = [
        ":autovalue_plugin",
    ],
    neverlink = 1,
    exports = [
        "@com_google_auto_value_auto_value//jar",
    ],
)

java_library(
    name = "generator",
    srcs = [
        ":generator_files",
    ],
    deps = [
        "//:annotations_java_proto",
        "//:client_java_proto",
        "//:field_behavior_java_proto",
        "//:longrunning_java_proto",
        "//:resource_java_proto",
        "//src/main/java/com/google/api/generator/engine",
        "//src/main/java/com/google/api/generator/engine/ast",
        "//src/main/java/com/google/api/generator/gapic",
        "//src/main/java/com/google/api/generator/gapic/model",
        "@com_google_guava_guava//jar",
        "@com_google_protobuf//:protobuf_java",
    ],
)
