package(default_visibility = ["//visibility:public"])
#package(default_visibility = ["//:__pkg__"])

filegroup(
    name = "generator_files",
    srcs = glob(["*.java"]),
)

java_plugin(
    name = "autovalue_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = [
        "@com_google_auto_value_auto_value//jar",
    ],
)

java_library(
    name = "autovalue",
    exported_plugins = [
        ":autovalue_plugin",
    ],
    neverlink = 1,
    exports = [
        "@com_google_auto_value_auto_value//jar",
    ],
)

java_library(
    name = "generator",
    srcs = [
        ":generator_files",
    ],
    deps = [
        "@com_google_guava_guava__com_google_api_codegen//jar",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)
