package(default_visibility = ["//visibility:public"])

filegroup(
    name = "engine_files",
    srcs = [
        "//src/main/java/com/google/api/generator/engine/basics:basics_files",
        "//src/main/java/com/google/api/generator/engine/format:format_files",
        "//src/main/java/com/google/api/generator/engine/lexicon:lexicon_files",
    ],
)

java_library(
    name = "engine",
    runtime_deps = [
        "//src/main/java/com/google/api/generator/engine/basics",
        "//src/main/java/com/google/api/generator/engine/format",
        "//src/main/java/com/google/api/generator/engine/lexicon",
    ],
)
