load("@rules_java//java:defs.bzl", "java_library", "java_proto_library")

java_proto_library(
    name = "status_java_proto",
    visibility = [
        "//src/main/java/com/google/api/generator/gapic:__subpackages__",
        "//src/test/java/com/google/api/generator/gapic:__subpackages__",
    ],
    deps = [
        "@com_google_googleapis//google/rpc:status_proto",
    ],
)

java_library(
    name = "gapic",
    srcs = glob(["*.java"]),
    deps = [
        "//src/main/java/com/google/api/generator/gapic/composer",
        "//src/main/java/com/google/api/generator/gapic/model",
        "//src/main/java/com/google/api/generator/gapic/protoparser",
        "//src/main/java/com/google/api/generator/gapic/protowriter",
        "@com_google_protobuf//:protobuf_java",
    ],
)
