package(default_visibility = ["//visibility:public"])

filegroup(
    name = "assert_files",
    srcs = glob(["*.java"]),
)

java_library(
    name = "assert",
    srcs = [
        ":assert_files",
    ],
    deps = [
        "//src/test/java/com/google/api/generator/diff",
        "@com_google_guava_guava//jar",
        "@google_java_format_all_deps//jar",
        "@io_github_java_diff_utils//jar",
    ],
)
