package(default_visibility = ["//visibility:public"])

filegroup(
    name = "assert_files",
    srcs = glob(["*.java"]),
)

java_library(
    name = "assertUtils",
    srcs = [
        ":assert_files",
    ],
    deps = [
        "//src/test/java/com/google/api/generator/diffUtils",
        "@io_github_java_diff_utils//jar",
        "@junit_junit//jar",
    ],
)
