package(default_visibility = ["//visibility:public"])

filegroup(
    name = "diff_files",
    srcs = glob(["*.java"]),
)

java_library(
    name = "diffUtils",
    srcs = [
        ":diff_files",
    ],
    deps = [
        "@com_google_guava_guava//jar",
        "@google_java_format_all_deps//jar",
        "@io_github_java_diff_utils//jar",
    ],
)
