load("@rules_java//java:defs.bzl", "java_test")
load("//:rules_bazel/unit_golden_update.bzl", "golden_update")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "engine_files",
    srcs = glob(["*.java"]) + [
        "//src/test/java/com/google/api/generator/engine/ast:ast_files",
        "//src/test/java/com/google/api/generator/engine/lexicon:lexicon_files",
        "//src/test/java/com/google/api/generator/engine/writer:writer_files",
    ],
)

TESTS = [
    "JavaCodeGeneratorTest",
]

TEST_DEPS = [
    "//src/main/java/com/google/api/generator/engine/ast",
    "//src/main/java/com/google/api/generator/engine/writer",
    "//src/test/java/com/google/api/generator/test/framework:asserts",
    "//src/test/java/com/google/api/generator/test/framework:utils",
    "@junit_junit//jar",
]

[java_test(
    name = test_name,
    srcs = ["%s.java" % test_name],
    data = ["//src/test/java/com/google/api/generator/engine/goldens:goldens_files"],
    test_class = "com.google.api.generator.engine.%s" % test_name,
    deps = TEST_DEPS,
) for test_name in TESTS]

# Run `bazel run src/test/java/com/google/api/generator/engine:JavaCodeGeneratorTest_update`
# to update goldens as expected generated code.
[golden_update(
    name = "%s_update" % test_name,
    srcs = ["%s.java" % test_name],
    data = ["//src/test/java/com/google/api/generator/engine/goldens:goldens_files"],
    test_class = "com.google.api.generator.engine.%s" % test_name,
    deps = TEST_DEPS,
) for test_name in TESTS]
