load("@rules_java//java:defs.bzl", "java_test")

TESTS = [
    "JavaCodeGeneratorTest",
]

TEST_DEPS = [
    "//src/main/java/com/google/api/generator/engine/ast",
    "//src/main/java/com/google/api/generator/engine/writer",
    "//src/test/java/com/google/api/generator/test/framework:asserts",
    "//src/test/java/com/google/api/generator/test/framework:utils",
    "@junit_junit//jar",
]

[java_test(
    name = test_name,
    srcs = ["%s.java" % test_name],
    data = ["//src/test/java/com/google/api/generator/engine/goldens:goldens_files"],
    test_class = "com.google.api.generator.engine.%s" % test_name,
    deps = TEST_DEPS,
) for test_name in TESTS]

# Run `bazel run src/test/java/com/google/api/generator/engine:JavaCodeGeneratorTest_update`
# to update goldens as expected generated code.
[java_binary(
    name = "%s_update" % test_name,
    srcs = ["%s.java" % test_name],
    data = ["//src/test/java/com/google/api/generator/engine/goldens:goldens_files"],
    main_class = "com.google.api.generator.test.framework.SingleJUnitTestRunner",
    args = ["com.google.api.generator.engine.%s" % test_name],
    deps = TEST_DEPS,
    runtime_deps = ["//src/test/java/com/google/api/generator/test/framework:junit_runner"],
) for test_name in TESTS]
