package(default_visibility = ["//visibility:public"])

filegroup(
    name = "gapic_files",
    srcs = [
        "//src/test/java/com/google/api/generator/gapic/composer:composer_files",
        "//src/test/java/com/google/api/generator/gapic/dummy:dummy_files",
        "//src/test/java/com/google/api/generator/gapic/model:model_files",
        "//src/test/java/com/google/api/generator/gapic/protoparser:protoparser_files",
    ],
)
