load("@rules_java//java:defs.bzl", "java_test")

package(default_visibility = ["//visibility:public"])

TESTS = [
    "TrieTest",
]

filegroup(
    name = "util_files",
    srcs = ["{0}.java".format(f) for f in TESTS],
)

[java_test(
    name = test_name,
    srcs = ["{0}.java".format(test_name)],
    test_class = "com.google.api.generator.util.{0}".format(test_name),
    deps = [
        "//src/main/java/com/google/api/generator/util",
        "@com_google_guava_guava//jar",
        "@com_google_truth_truth//jar",
        "@junit_junit//jar",
    ],
) for test_name in TESTS]
