load(
    "//rules_java_gapic:java_gapic.bzl",
    "java_gapic_library",
    "java_gapic_test",
)

package(default_visibility = ["//visibility:public"])

java_library(
    name = "showcase_tests",
    srcs = glob(["*.java"]),
    deps = [
        "//test/integration:generated_showcase",
        "//test/showcase:showcase_java_proto",
        "@com_google_api_api_common",
        "@com_google_api_gax_java//gax",
        "@com_google_api_gax_java//gax-grpc:gax_grpc",
        "@com_google_code_gson_gson//jar",
        "@com_google_googleapis//google/type:type_java_proto",
        "@com_google_http_client_google_http_client",
        "@io_grpc_grpc_java//auth",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@io_grpc_grpc_netty_shaded//jar",
        "@io_opencensus_opencensus_contrib_grpc_metrics//jar",
        "@junit_junit//jar",
    ],
)

java_gapic_test(
    name = "showcase_integration_test_suite",
    size = "small",
    test_classes = [
        "com.google.showcase.v1beta1.FirstHttpIT",
        "com.google.showcase.v1beta1.FirstRpcIT",
        "com.google.showcase.v1beta1.NumericEnumsIT",
    ],
    runtime_deps = [":showcase_tests"],
)
