package(default_visibility = ["//visibility:public"])

filegroup(
    name = "gapic_files",
    srcs = glob(["*.java"]) + [
        "//src/main/java/com/google/api/generator/gapic/composer:composer_files",
        "//src/main/java/com/google/api/generator/gapic/model:model_files",
        "//src/main/java/com/google/api/generator/gapic/protoparser:protoparser_files",
        "//src/main/java/com/google/api/generator/gapic/protowriter:protowriter_files",
        "//src/main/java/com/google/api/generator/gapic/utils:utils_files",
    ],
)

java_proto_library(
    name = "status_java_proto",
    visibility = [
        "//src/main/java/com/google/api/generator/gapic:__subpackages__",
        "//src/test/java/com/google/api/generator/gapic:__subpackages__",
    ],
    deps = [
        "@com_google_googleapis//google/rpc:status_proto",
    ],
)

java_library(
    name = "gapic",
    srcs = glob(["*.java"]),
    deps = [
        "//src/main/java/com/google/api/generator/gapic/composer",
        "//src/main/java/com/google/api/generator/gapic/model",
        "//src/main/java/com/google/api/generator/gapic/protoparser",
        "//src/main/java/com/google/api/generator/gapic/protowriter",
        "@com_google_protobuf//:protobuf_java",
    ],
)
