java_proto_library(
    name = "secretmanager_java_proto",
    deps = [":secretmanager_proto"],
)

java_grpc_library(
    name = "secretmanager_java_grpc",
    srcs = [":secretmanager_proto"],
    deps = [":secretmanager_java_proto"],
)

java_gapic_library(
    name = "secretmanager_java_gapic",
    srcs = [":secretmanager_proto_with_info"],
    gapic_yaml = None,
    grpc_service_config = "secretmanager_grpc_service_config.json",
    rest_numeric_enums = True,
    service_yaml = "secretmanager_v1beta2.yaml",
    test_deps = [
        "//google/cloud/location:location_java_grpc",
        "//google/iam/v1:iam_java_grpc",
        ":secretmanager_java_grpc",
    ],
    transport = "grpc+rest",
    deps = [
        ":secretmanager_java_proto",
        "//google/api:api_java_proto",
        "//google/cloud/location:location_java_proto",
        "//google/iam/v1:iam_java_proto",
    ],
)

java_gapic_test(
    name = "secretmanager_java_gapic_test_suite",
    test_classes = [
        "com.google.cloud.secretmanager.v1beta2.SecretManagerServiceClientHttpJsonTest",
        "com.google.cloud.secretmanager.v1beta2.SecretManagerServiceClientTest",
    ],
    runtime_deps = [":secretmanager_java_gapic_test"],
)

# Open Source Packages
java_gapic_assembly_gradle_pkg(
    name = "google-cloud-secretmanager-v1beta2-java",
    transport = "grpc+rest",
    deps = [
        ":secretmanager_java_gapic",
        ":secretmanager_java_grpc",
        ":secretmanager_java_proto",
        ":secretmanager_proto",
    ],
    include_samples = True,
)