package(default_visibility = ["//visibility:public"])

filegroup(
    name = "ast_files",
    srcs = glob(["*.java"]),
)

java_library(
    name = "ast",
    srcs = [
        ":ast_files",
    ],
    deps = [
        "//src/main/java/com/google/api/generator:autovalue",
        "//src/main/java/com/google/api/generator/engine/lexicon",
        "//src/main/java/com/google/api/generator/engine/escaper",
        "@com_google_auto_value_auto_value//jar",
        "@com_google_auto_value_auto_value_annotations//jar",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava_guava//jar",
        "@javax_validation_javax_validation_api//jar",
    ],
)
