package(default_visibility = ["//visibility:public"])

filegroup(
    name = "basics_files",
    srcs = glob(["*.java"]),
)

java_library(
    name = "basics",
    srcs = [
        ":basics_files",
    ],
    deps = [
        "//src/main/java/com/google/api/generator/engine/lexicon",
        "@javax_validation_javax_validation_api//jar",
    ],
)
