load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "escaper_files",
    srcs = glob(["*.java"]),
)

java_library(
    name = "escaper",
    srcs = [
        ":escaper_files",
    ],
    deps = [
        "@com_google_guava_guava//jar",
    ],
)
