load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "lexicon_files",
    srcs = glob(["*.java"]),
)

java_library(
    name = "lexicon",
    srcs = [
        ":lexicon_files",
    ],
    deps = [
        "@com_google_guava_guava//jar",
    ],
)
