package(default_visibility = ["//visibility:public"])

filegroup(
    name = "writer_files",
    srcs = glob(["*.java"]),
)

java_library(
    name = "writer",
    srcs = [
        ":writer_files",
    ],
    deps = [
        "//src/main/java/com/google/api/generator/engine/ast",
        "//src/main/java/com/google/api/generator/engine/lexicon",
        "@com_google_guava_guava//jar",
        "@google_java_format_all_deps//jar",
    ],
)
